[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
litestar = { version = "^2.15.2", extras = ["standard"] }
advanced-alchemy = "^1.2.0"
msgspec = "^0.19.0"
sqlalchemy = "^2.0.40"
aiosqlite = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"